# moose-package

./: .gitmodules  .travis.yml  .travis_build.sh  CMakeLists.txt  README.md  README.rst  build_moose.sh.in  build_static_gsl.cmake  build_static_gsl.sh.in  build_static_hdf.cmake  build_static_hdf5.sh.in  build_static_osg.cmake  moose_cpack.cmake  setup.cfg  setup.py
OBS/: build_locally_obs.sh
cmake/: moosegui.in
docs/user/GUI/: index.rst
experiments/: RS.CNG.swc
macosx/: brew_moose.sh  create_dmg_using_brew.sh  moose.rb  release_dmg_file.sh
models/: B13a.CNG.swc  B15a.CNG.swc
moogli/: .travis.yml  CMakeLists.txt
moogli/docs/: make.bat
moogli/models/: J31a.CNG.swc
moogli/moogli/: CMakeLists.txt
moogli/moogli/widgets/: colorbar.py
moose/: CMakeLists.txt
moose/docs/user/py/cookbook/: index.rst
moose/moose-core/: CMakeLists.txt
moose/moose-core/.travis/: deploy_pypi.sh
package_data/: moose.desktop
scripts/: add_moose_subtree.sh  create_sdist.sh  fdupes.py  pull_moose_branch.sh  pull_subtree.sh  push_subtree.sh
